--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.12.4",
     "ejs": "2.1.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "underscore": "~1.8.3",
+    "purecss": "~0.6.0"
   }
 }
