--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "underscore": "~1.8.3",
-    "purecss": "~0.6.0"
+    "purecss": "~0.6.0",
+    "bootstrap": "~3.3.5"
   }
 }
