--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "serve-favicon": "~2.2.1",
     "underscore": "~1.8.3",
     "purecss": "~0.6.0",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "jquery": "~2.1.4",
+    "jade": "~1.11.0"
   }
 }
