--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "purecss": "~0.6.0",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
-    "jade": "~1.11.0"
+    "jade": "~1.11.0",
+    "mongoose": "~4.1.2",
+    "express-mongoose": "~0.1.0"
   }
 }
